--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.10",
+    "@tanstack/react-query": "^5.81.5",
     "axios": "^1.10.0",
     "dompurify": "^3.2.6",
     "react": "^19.1.0",
