--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.61.1",
     "react-icons": "^5.5.0",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^7.6.2",
     "tailwindcss": "^4.1.10",
     "zod": "^4.0.13"
