--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
     "@material-tailwind/react": "^2.1.10",
     "@tailwindcss/vite": "^4.1.10",
     "@tanstack/react-query": "^5.81.5",
+    "@tiptap/react": "^3.0.9",
+    "@tiptap/starter-kit": "^3.0.9",
     "axios": "^1.10.0",
     "dompurify": "^3.2.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.61.1",
     "react-icons": "^5.5.0",
-    "react-quill": "^2.0.0",
     "react-router-dom": "^7.6.2",
     "tailwindcss": "^4.1.10",
     "zod": "^4.0.13"
