--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
+    "@types/jwt-decode": "^2.2.1",
     "@types/react": "^19.1.9",
     "@types/react-dom": "^19.1.2",
     "@types/react-router-dom": "^5.3.3",
