--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.2",
     "tailwindcss": "^4.1.10",
-    "zod": "^4.0.13"
+    "zod": "^4.0.13",
+    "zustand": "^5.0.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
