--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@tinymce/tinymce-react": "^6.3.0",
     "axios": "^1.10.0",
     "dompurify": "^3.2.6",
+    "framer-motion": "^12.23.16",
     "jwt-decode": "^4.0.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
