--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dompurify": "^3.2.6",
     "framer-motion": "^12.23.16",
     "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.544.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.61.1",
