--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
+    "@tailwindcss/typography": "^0.5.19",
     "@types/jwt-decode": "^2.2.1",
     "@types/react": "^19.1.9",
     "@types/react-dom": "^19.1.2",
